<resources>
    <string name="app_name">Quick Merchant</string>
    <string name="nfc" translatable="false">Card Emulation</string>
    <string name="nfc_service" translatable="false">HCE Service</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- General -->
    <string name="err">Error Occur</string>
    <string name="alert">Alert</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <!-- Model -->
    <!-- Transaction Class -->
    <string name="reload">Reload</string>
    <string name="withdraw">Withdraw</string>
    <string name="payment">Payment</string>
    <string name="transfer_in">Receive Transfer</string>
    <string name="transfer_out">Transfer Out</string>
    <string name="payment_receive">Payment Receive</string>


    <!-- Login / Registration / Forgot Password -->
    <!-- Share -->
    <string name="email">Email</string>
    <string name="email_hint">Enter Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter Password</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="minimum_password_length">Password is required at least 6 characters</string>

    <!-- Login -->
    <string name="login">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="to_register">Click to Register</string>
    <string name="login_success">Login Successfully</string>
    <string name="login_fail">Login Failure</string>
    <string name="invalid_account">Invalid Account</string>
    <string name="new_device">New Device Login</string>
    <string name="log_out_from_old_device">Log out from old device and log in new device</string>

    <!--NFC Login-->
    <string name="tap_nfc_device">Tap your phone to a corresponding NFC-enabled device</string>

    <!-- Registration -->
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Enter Confirm Password</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter Name</string>
    <string name="register">REGISTER</string>
    <string name="to_login">Click to Login</string>
    <string name="mismatch_password">Password and Confirm Password not match</string>
    <string name="register_successfully">Register Successfully</string>
    <string name="fail_register">Fail to register</string>

    <!-- Forgot Password -->
    <string name="reset_password_email_sent">The password reset email was successfully sent</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_info">Enter your email address We will send you an email to reset your password</string>


    <!-- MainActivity -->
    <string name="home">Home</string>
    <string name="receive">Receive</string>
    <string name="settings">Settings</string>


    <!-- HomeFragment -->
    <string name="title">E-wallet Balance</string>
    <string name="welcome">Welcome, </string>
    <string name="enter_amount">Enter amount</string>
    <string name="history">History</string>
    <string name="top_up_success">Top Up Successfully</string>
    <string name="insufficient_balance">Insufficient Balance</string>
    <string name="withdraw_success">Withdraw Successfully</string>


    <!-- Transaction Activity -->
    <string name="transaction_activity_title">Transaction History</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="noRecord">No record found!</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="done">Done</string>


    <!-- Filtering Popup Windows Use -->
    <string name="history_search_title">History Search</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="search">Search</string>
    <string name="selectDate">Select a date</string>
    <string name="pleaseFillInDate">Please select date</string>
    <string name="date_duration_error">End date should be greater than Start date</string>
    <string name="period">Period</string>

    <!--Duration-->
    <string name="today">Today</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="last_90_days">Last 90 days</string>

    <!--  Button Names  -->
    <string name="clearTxt" translatable="false">C</string>
    <string name="backspace" translatable="false">\u232b</string>
    <string name="sevenNum" translatable="false">7</string>
    <string name="eightNum" translatable="false">8</string>
    <string name="nineNum" translatable="false">9</string>
    <string name="fourNum" translatable="false">4</string>
    <string name="fiveNum" translatable="false">5</string>
    <string name="sixNum" translatable="false">6</string>
    <string name="oneNum" translatable="false">1</string>
    <string name="twoNum" translatable="false">2</string>
    <string name="threeNum" translatable="false">3</string>
    <string name="zeroNum" translatable="false">0</string>
    <string name="dotSymbol" translatable="false">.</string>
    <string name="clear" translatable="false">C</string>
    <string name="enter">Enter</string>

    <!-- Receive Fragment -->
    <string name="require_amount">Please enter amount</string>
    <string name="nfc_disable_alert">NFC is disabled</string>
    <string name="nfc_enable_alert">Please enable NFC module</string>
    <string name="proceed_to_enable">Proceed to enable</string>
    <string name="nfc_not_found">NFC module not supported</string>

    <!-- Receive Activity -->
    <string name="receiving">Receiving</string>
    <string name="waiting_tag">Waiting for NFC Tag...</string>

    <!-- Card Reader Class -->
    <string name="please_wait">Please wait...</string>
    <string name="processing">Processing</string>
    <string name="payment_success">Payment Successfully</string>
    <string name="unknown_tag_detected">Unknown Tag Detected</string>
    <string name="tag_disconnected">Tag Disconnected</string>
    <string name="communication_error">Communication Error</string>

    <!-- Settings Fragment -->
    <string name="settings_title">Settings</string>
    <string name="log_out_success">Log Out Successfully</string>
    <string name="log_out">Log Out</string>
    <string name="language">Language</string>
    <string name="require_field">This field cannot be blank</string>
    <string name="back_to_login">Back to Login</string>
    <string name="amount_shortcut_key">Amount Shortcut Key</string>
    <string name="nfc_login">NFC transfer login</string>
    <string name="change_authentication_pin">Change Authentication PIN</string>

    <!-- Filter Transaction Type-->
    <string name="please_select_at_least_one" translatable="false"></string>

    <!-- PIN Authentication -->
    <string name="old_pin">Enter Old PIN</string>
    <string name="new_pin">Enter New PIN</string>

</resources>