<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="4">

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        app:backgroundTint="@color/light_grey"
        android:text="@string/sevenNum"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="3dp"
        android:layout_gravity="fill"
        android:background="@color/black"
        app:backgroundTint="@color/light_grey"
        android:text="@string/eightNum"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginLeft="3dp"
        android:layout_gravity="fill"
        android:background="@color/black"
        app:backgroundTint="@color/light_grey"
        android:text="@string/nineNum"
        android:textColor="@color/black"
        android:textSize="30sp" />




    <Button
        android:id="@+id/backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="3dp"
        android:layout_gravity="fill"
        android:background="@color/red"
        app:backgroundTint="@color/red"
        android:text="@string/backspace"
        android:textColor="@color/white"
        android:textSize="25sp" />



    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="3dp"
        android:layout_gravity="fill"
        android:background="@color/black"
        app:backgroundTint="@color/light_grey"
        android:text="@string/fourNum"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:background="@color/black"
        app:backgroundTint="@color/light_grey"
        android:text="@string/fiveNum"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:background="@color/black"
        app:backgroundTint="@color/light_grey"
        android:text="@string/sixNum"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_gravity="fill"
        android:background="@color/red"
        app:backgroundTint="@color/red"
        android:text="@string/clearTxt"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="3dp"
        android:layout_gravity="fill"
        android:background="@color/black"
        app:backgroundTint="@color/light_grey"
        android:text="@string/oneNum"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_gravity="fill"
        android:background="@color/black"
        app:backgroundTint="@color/light_grey"
        android:text="@string/twoNum"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_gravity="fill"
        android:background="@color/black"
        app:backgroundTint="@color/light_grey"
        android:text="@string/threeNum"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_rowSpan="2"
        android:layout_gravity="fill"
        android:background="@color/green"
        app:backgroundTint="@color/green"
        android:text="Enter"
        android:textColor="@color/white"
        android:textSize="20sp" />




    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="3dp"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:background="@color/black"
        app:backgroundTint="@color/light_grey"
        android:text="@string/zeroNum"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_gravity="fill"
        android:background="@color/black"
        app:backgroundTint="@color/light_grey"
        android:text="@string/dotSymbol"
        android:textColor="@color/black"
        android:textSize="30sp" />



</GridLayout>