<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/forgot_password_title" />

    <TextView
        android:textSize="14sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/forgot_password_info" />

    <EditText
        android:id="@+id/forgot_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email_hint"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="textEmailAddress" />


    <ProgressBar
        android:id="@+id/forgot_progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/forgot_btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/soft_blue"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/forgot_loginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/soft_blue"
        android:text="@string/back_to_login" />


</LinearLayout>