<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:textSize="20dp"
        android:padding="12dp"
        android:background="@color/navy_blue"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/tv_change_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTint="@color/black"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/change_authentication_pin" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>

    <TextView
        android:id="@+id/tv_amount_customization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_price_change_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/amount_shortcut_key" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_language_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/language" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>

    <TextView
        android:id="@+id/setting_nfc_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_output_24"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/nfc_login" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>

    <TextView
        android:id="@+id/setting_tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_logout_24"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/log_out" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>

</LinearLayout>