<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy_blue"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="35dp"
            android:minWidth="35dp"
            android:color="@color/white"
            android:backgroundTint="@color/white"
            android:contentDescription="Back"
            android:background="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="top"
            android:textSize="20dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/filter" />

        <ImageButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="35dp"
            android:minWidth="35dp"
            android:color="@color/white"
            android:backgroundTint="@color/white"
            android:contentDescription="Back"
            android:background="@drawable/baseline_close_24" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_reload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/cb_color"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:text="@string/reload" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>

    <CheckBox
        android:id="@+id/cb_withdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/cb_color"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:text="@string/withdraw" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>

    <CheckBox
        android:id="@+id/cb_payment_receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/cb_color"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:text="@string/payment_receive" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="@string/reset"
            android:background="@drawable/shape2"
            android:textColor="@color/soft_blue" />

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/done"
            android:background="@drawable/shape2"
            android:textColor="@color/soft_blue" />

    </LinearLayout>

</LinearLayout>