<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_filter_popup"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy_blue"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="top"
            android:textSize="20dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/filter" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:minHeight="35dp"
            android:minWidth="35dp"
            android:color="@color/white"
            android:backgroundTint="@color/white"
            android:contentDescription="Back"
            android:background="@drawable/baseline_close_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:padding="12dp"
        android:paddingStart="20dp"
        android:textSize="18sp"
        android:text="@string/transaction_type" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>

    <TextView
        android:id="@+id/tv_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:paddingStart="20dp"
        android:textSize="18sp"
        android:text="@string/reset" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>


</LinearLayout>